<correção>: style>margin: .logo

--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
             <img class="the-bank-icon" src="src/image/the-bank-icon.png" alt="the bank icon">
             <h1>thebank</h1>
         </a>
-        <ul class="menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Contato</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Carreira</a></li>
-            <li><a class="btn" href="#">Cadastre-se</a></li>
-        </ul>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Contato</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Carreira</a></li>
+                <li><a class="btn" href="#">Cadastre-se</a></li>
+            </ul>
+        </nav>
     </header>
 </body>
 
